--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
   width: 400px;
   font-size: 2em;
   position: absolute;
+  margin-left: 250px;
   margin-bottom: 400px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: #F1C40F;
